--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -84,8 +84,10 @@ But first, we need to know what we mean by "model it". It's a broad term!
 
 ???
 ""  
-There's two main things we could mean when we say "model it". The first thing it  
-could mean is that there's a set of final artifacts we want to share with stakeholders.  
+There's two main things we could mean when we say "model it":  
+
+1. The first thing it could mean is that there's a set of final artifacts we 
+want to share with stakeholders.  
 
 This is also known as data model design, data warehouse design, or warehousing.  
 Choosing how we'll do it is a careful balance of trade-offs which our team will  
@@ -93,6 +95,7 @@ need to consider.
 
 There's numerous methodologies and books on this topic, and while it's fascinating,  
 we'll only be covering this subject briefly.  
+
 --
 
 **2. I need a reliable, scalable, intuitive process for generating those final artifacts.**
@@ -100,7 +103,7 @@ we'll only be covering this subject briefly.
 - The _real_ interest of this presentation
 
 ???
-The second thing it could mean is that you need a reliable, scalable, and  
+2. The second thing it could mean is that you need a reliable, scalable, and  
 intuitive process for creating those artifacts.  
 
 We can do that with dbt - and that's the real interest of this presentation!  
