--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -544,7 +544,8 @@ so your team can understand the inputs and outputs of your analytics ecosystem.
 - Consider the final use case when designing your final artifacts
 
 ???
-And finally, we always want to keep in mind what the final use case is:
+And finally, we always want to keep in mind what the final use case is by asking  
+questions like:
 - Who will need to use our final artifacts?
 - Which questions do we need to answer related to these data sets?
 - How well will the tools consuming our data products handle how we propose to model it?
