--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -560,7 +560,7 @@ Should I denormalize everything into one wide table? Should I use Kimball design
 
 ???
 ""  
-Okay, buy we still haven't answered the question about what the final artifacts  
+Okay, but we still haven't answered the question about what the final artifacts  
 should be. Should they be wide denormalized tables? Should we use a Kimball  
 design pattern?  
 
