--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -581,7 +581,7 @@ Our answer: it depends! For example:
 - If your BI tool is great with joins such as Looker, you can handle being a little
 more normalized. However, if it prefers flat data sets like Tableau, you might
 choose to denormalize.
-- If you have data sets that update in unpredictable ways, you might fair 
+- If you have data sets that update in unpredictable ways, it might be
 better joining this in the BI tool so you can keep the information isolated 
 to understand what you're looking at.
 - If your company and team is used to working with a specific methodology, then 
