--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -581,11 +581,11 @@ Our answer: it depends! For example:
 - If your BI tool is great with joins such as Looker, you can handle being a little
 more normalized. However, if it prefers flat data sets like Tableau, you might
 choose to denormalize.
-- If you have data sets that update in unpredictable ways, it might be
-better joining this in the BI tool so you can keep the information isolated 
+- or mayber you have data sets that update in unpredictable ways - it might be
+better joining these in the BI tool so you can keep the information isolated 
 to understand what you're looking at.
-- If your company and team is used to working with a specific methodology, then 
-sometimes it's just easier to go with the flow!
+- or maybe your team is used to working with a specific methodology - if that's  
+the case, sometimes it's just easier to go with the flow!
 
 --
 
