--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -687,8 +687,8 @@ Let's talk about the first interface - the DAG.
 A DAG (Directed Acyclic Graph) is generated in every dbt project, and reflects  
 how data flows from source to end product.  
 
-If you've ever been asked "where are those sales numbers coming from?", what  
-you're really being asked about how the end result is:
+If you've ever been asked "where are those sales numbers coming from?", you're  
+really being asked how the end result is:
 - consuming sources of data
 - being processed
 - and being calculated (what are the assumptions?)
