--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -774,7 +774,7 @@ At dbt Labs, here's what our prefixes mean:
     and null-if'ing. If it helps in downstream modeling, we'll also do things like case whens,
     row_numbers and filtering out duplicated or deleted records
     
-- dim_ and fct_ are final artifacts that will be used in analysis. Typically  
+- dim_ and fct_ are data sets that will be used in analysis. Typically  
 these are surfaced to stakeholders or outside tooling (such as a BI tool).  
   - dim_ stands for dimension and usually describes an entity or object, such as  
     customers, products, apartments, or providers.
