--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -776,13 +776,12 @@ At dbt Labs, here's what our prefixes mean:
     
 - dim_ and fct_ are data sets that will be used in analysis. Typically  
 these are surfaced to stakeholders or outside tooling (such as a BI tool).  
-  - dim_ stands for dimension and usually describes an entity or object, such as  
+  - dim_ stands for dimension and usually describes an entity or object, such as
     customers, products, apartments, or providers. The underlying data typically
     updates via overwriting values.
-  - fct_ describes something that's happening, i.e, an action or verb such as
-    orders, cases, plays, or listings, or comments.
-        - they usually append data rather than overwrite data, because the data  
-        is logged as one row per action taken. 
+  - fct_ describes something that's happening. I.e, an action or verb such as
+    orders, cases, plays, or listings, or comments. The underlying data usually 
+    appends updates to the data set rather than overwriting.
 
 [Teacher note:]
 This says "typically surfaced to outside tooling", because you can also keep  
