Formatting to try to get rid of renumbering on the preview side

--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -86,7 +86,7 @@ But first, we need to know what we mean by "model it". It's a broad term!
 ""  
 There's two main things we could mean when we say "model it":  
 
-1. The first thing it could mean is that there's a set of final artifacts we 
+[1.] The first thing it could mean is that there's a set of final artifacts we 
 want to share with stakeholders.  
 
 This is also known as data model design, data warehouse design, or warehousing.  
@@ -103,7 +103,7 @@ we'll only be covering this subject briefly.
 - The _real_ interest of this presentation
 
 ???
-2. The second thing it could mean is that you need a reliable, scalable, and  
+[2.] The second thing it could mean is that you need a reliable, scalable, and  
 intuitive process for creating those artifacts.  
 
 We can do that with dbt - and that's the real interest of this presentation!  
