--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -780,7 +780,7 @@ these are surfaced to stakeholders or outside tooling (such as a BI tool).
     customers, products, apartments, or providers. The underlying data typically
     updates via overwriting values.
   - fct_ describes something that's happening. I.e, an action or verb such as
-    orders, cases, plays, or listings, or comments. The underlying data usually 
+    orders, cases, plays, listings, or comments. The underlying data usually 
     appends updates to the data set rather than overwriting.
 
 ""  
